# dde-wldpms

./: CMakeLists.txt
debian/: README.source  changelog  control  copyright
src/: main.cpp
